# librepos

./: CONCEPT.md  README.md  com.github.librepos.librepos.json  meson.build
data/: com.github.librepos.librepos.appdata.xml.in  com.github.librepos.librepos.desktop.in  com.github.librepos.librepos.gschema.xml  meson.build
po/: POTFILES  meson.build
src/: librepos.gresource.xml  main.vala  meson.build  window.ui  window.vala
